resolved bleeding header issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,25 +7,16 @@ body {
     background-color: gray;
     margin: 0; /* removes default margins from body */
 }
-.header {
+#stickyheader {
     background-color: green;
     border: 2px solid red;
-    margin: 0 0 0 0;
-    width: 98%;
-    top: 0;
-    left: 0;
     padding: 10px;
-}
-.sticky {
-    position: fixed;
-    left: 0;
-    width: 98%
 }
 nav {
     background-color: yellow;
     border: 2px solid red;
     text-align: center;
-    width: 99.7%;
+    width: auto;
     overflow: auto; /* prevents container from collapsing on ul float */
 }
 nav ul { /* contains the ul bullets */
@@ -41,15 +32,23 @@ nav ul li{ /* contains the list strings */
     background-color: white;
     display: inline-block; /* displays list horizonally */
     margin: 0 10% 0 10%; /* sets space between strings */
-
 }
 .main {
+    display: inline-block;
     background-color: blue;
     border: 2px solid red;
-    margin: 0 0 0 0; /* top margin ensures that top of lower container does not initially hide behind header */
-    height: 100%;
+    width: 60%;
+    margin: 0 0 -5px 0; /* top margin ensures that top of lower container does not initially hide behind header */
     overflow: auto; /* keeps parent container from collapsing on left and right floats */
     padding: 10px;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: auto;
+    z-index: 999;
 }
 .sticky + .main {
     padding-top: 198px;
@@ -78,13 +77,15 @@ p {
     border: 2px solid red;
     background-color: orange;
     float: left;
-    width: 47%;
+    width: 45%;
     padding: 10px;
+    margin: 0 5px 0 5px;
 }
 #right {
     border: 2px solid red;
     background-color: teal;
-    float: right;
-    width: 47%;
+    float: left;
+    width: 45%;
     padding: 10px;
+    margin: 0 5px 0 5px;
 }
